--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title: 백송민 Songmin Baek
-description: Major of Information & Communication Engineering, School of Computer Science & Engineering, Yeungnam University
+title: Songmin Baik
 
 plugins:
   - jekyll-remote-theme
 
-remote_theme: zivhub/monophase@main
+remote_theme: zivhub/monophase
